# CricView

./: .gitignore  LICENSE  README.md  SECURITY.md  app.py  cricview_saas_architecture.md  main.py  pyproject.toml  railway.toml  requirements.txt  scratchpad_289c167q.md
.streamlit/: config.toml
components/: __init__.py  filters.py  kpi_card.py  styles.py
config/: __init__.py  constants.py  theme.py
data/processed/: matches.parquet  player_batting.parquet  player_batting_phase.parquet  player_bowling.parquet  player_bowling_phase.parquet  team_stats.parquet  venue_stats.parquet  yearly_stats.parquet
docs/: LEGAL.md
pages/: 1_Overview.py  2_Player_Stats.py  3_Comparison.py  4_Overall_Analysis.py  5_Team_Analytics.py  6_Year_Explorer.py  _path_setup.py
scripts/: ingest.py
src/: batting_analysis.py  bowling_analysis.py  charts.py  data_loader.py  team_analysis.py
