[project]
name = "cricview"
version = "1.0.0"
description = "T20 Cricket Intelligence Platform"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "Pillow>=10.0.0",
]

[project.scripts]
app = "streamlit.web.cli:main"

[tool.setuptools]
py-modules = []
